added weighted precision calibration; beginning of analysis

--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -191,7 +191,7 @@
 
                             <div id="previous_messages" style="display:flex; width: 80%; flex:1; flex-direction: column; justify-content:end;">
                                 <div style="display:flex; justify-content: center;"><b>These were the messages available to the previous participant:</b></div>
-                                <div id="messages" style="display:flex; justify-content: space-between;">
+                                <div id="messages" style="display:flex; justify-content: center;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg1}}.png" id="msg1" style="max-width: 100px ; max-height:100px ; display: inline ;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg2}}.png" id="msg2" style="max-width: 100px ; max-height:100px ; display: inline ;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg3}}.png" id="msg3" style="max-width: 100px ; max-height:100px ; display: inline ;">
@@ -243,7 +243,7 @@
                         
                         <div id="previous_messages" style="display:flex; width: 80%; flex:1; flex-direction: column; justify-content:end;">
                             <div style="display:flex; justify-content: center;"><b>These were the messages available to the previous participant:</b></div>
-                                <div id="messages" style="display:flex; justify-content: space-between;">
+                                <div id="messages" style="display:flex; justify-content: center;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg1}}.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg2}}.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
                                     <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.trial.msg3}}.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
